Mobile overflow fix

--- a/assets/style/style.sass
+++ b/assets/style/style.sass
@@ -36,7 +36,6 @@ body
   @media screen and (max-width: 740px)
     background-size: 100% 300px
   header
-    overflow: hidden
     .topbar
       position: relative
       display: flex
